# macollect

./: .gitignore  README.md  pyproject.toml
src/macollect/: cli.py  pipeline.py  report.py
src/macollect/formatters/: json_formatter.py
src/macollect/modules/: code_signing.py  credential_artifacts.py  extended_attributes.py  persistence.py  process_snapshot.py  system_baseline.py  tcc_databases.py  unified_log.py
