[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "macollect"
version = "1.0.0"
description = "macollect - macOS forensic artifact collector for incident response and threat hunting"
authors = [
    { name = "R. Santos" }
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
macollect = "macollect.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest"]